# enterprise-templates

./: .gitignore  README.md  TESTING-SUMMARY.md  USAGE.md  scaffold.sh
automation/: deploy-template.sh
change-control/: DEPRECATED.md  README.md  pipeline-generic-template.yml  pipeline-python-template.yml  pipeline-template.yml
core/: enterprise-schema.md  enterprise-template.yml
core/agents/ci/: README.md  auto-test.yml  deploy-gate.yml  incident.yml  pr-review.yml
core/agents/local/: README.md  code-review.md  debug.md  deploy.md  doc-writer.md  e2e-test-writer.md  scaffold.md  test-writer.md
core/ci-cd/: pipeline-base.yml  pipeline-generic.yml  pipeline-node.yml  pipeline-python.yml
core/docker/: .dockerignore  Dockerfile.generic  Dockerfile.node  Dockerfile.python
core/docs/: AGENTS-template.md  CLAUDE-template.md  GITIGNORE-generic  GITIGNORE-node  GITIGNORE-python  README-template.md  ROI-FRAMEWORK-TEMPLATE.md
core/testing/test-config-base/: testing-standards.md
core/testing/test-config-node/: .eslintrc.json
core/testing/test-config-python/: .flake8  (+3 more)
documentation/: DEPRECATED.md
project-starter/: DEPRECATED.md
starters/generic/: Makefile  README.md
starters/node/: .eslintrc.json  package.json  vitest.config.ts
starters/python/: Makefile  pyproject.toml  requirements-dev.txt
starters/python/src/: main.py
starters/python/tests/e2e/: test_health.py
starters/python/tests/unit/: test_main.py
test-project/: QUICK-START.md  README.md  TEST-RESULTS.md  TESTING-GUIDE.md  test-branch-management.sh  test-pipelines.sh  test-scaffold.sh
(+14 files in other folders)
